<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">
        <xliff:g id="application_name">Dicoding Github Users</xliff:g>
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="home">Beranda</string>
    <string name="about">Tentang</string>
    <string name="subtitle_app">Lihat Daftar User Github Disini!</string>
    <string name="tv_title_home">Github Users</string>
    <string name="profile_name">Tangguh Tri Prasetyo</string>
    <string name="profile_address">Semarang, Indonesia</string>
    <string name="profile_total_follower">1234</string>
    <string name="followers">Followers</string>
    <string name="profile_total_following">4321</string>
    <string name="followings">Following</string>
    <string name="email">Email</string>
    <string name="profile_email">
        <xliff:g id="user_email">tangguhtriprasetyo@gmail.com</xliff:g>
    </string>
    <string name="phone">Phone</string>
    <string name="profile_phone">+62 821 3827 3695</string>
    <string name="github">Github</string>
    <string name="profile_username">
        <xliff:g id="user_name">tangguhtriprasetyo</xliff:g>
    </string>
    <string name="profile_title_repo">Repositories</string>
    <string name="profile_total_repositories">27</string>
    <string name="back_button">Back</string>
    <string name="tv_username">Username</string>
    <string name="user_avatar">Avatar User</string>
    <string name="tv_name">Nama</string>
    <string name="tv_location">Lokasi User</string>
    <string name="tv_company">Company</string>
    <string name="ic_apps">Ic Apps</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_tab_text">This is Tab %1$d</string>
    <string name="tabFollowers">Followers \n%1$s</string>
    <string name="tabFollowing">Following \n%1$s</string>
    <string name="setting_language">Setting Bahasa</string>
    <string name="search_hint">Cari User…</string>
    <string name="tv_try_again">Coba Lagi</string>
    <string name="tv_notification">Notifikasi</string>
    <string name="title_reminder">Pengingat pada pukul 09.00 AM</string>
    <string name="title_language">Bahasa</string>
    <string name="select_language">Pilih Bahasa</string>
    <string name="selected_language">Indonesia</string>
    <string name="key_language_setting">key_language_setting</string>
    <string name="key_notification_setting">key_notification_setting</string>
    <string name="tv_title_setting">Pengaturan</string>
    <string name="title_activity_settings">SettingActivity</string>
</resources>