<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/white"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/tv_title_detail"
                style="@style/Title"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical"
                android:text="@string/tv_username" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linear_detail_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_detail"
        android:background="@drawable/bg_profile"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingTop="32dp"
        android:paddingEnd="32dp"
        android:paddingBottom="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_avatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop"
            tools:src="@drawable/bg_profile" />

        <TextView
            style="@style/TitleContent"
            android:text="@string/tv_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_detail_name"
            style="@style/ContentDetail"
            android:text="@string/tv_name"
            android:textColor="@color/white" />

        <TextView
            style="@style/TitleContent"
            android:text="@string/tv_username"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_detail_username"
            style="@style/ContentDetail"
            android:text="@string/tv_username"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleContent"
                    android:text="@string/tv_company"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_detail_company"
                    style="@style/ContentDetail"
                    android:layout_marginBottom="4dp"
                    android:text="@string/tv_company"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleContent"
                    android:text="@string/tv_location"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_detail_location"
                    style="@style/ContentDetail"
                    android:layout_marginBottom="4dp"
                    android:text="@string/tv_location"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/TitleContent"
                    android:text="@string/profile_title_repo"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tv_detail_repository"
                    style="@style/ContentDetail"
                    android:layout_marginBottom="4dp"
                    android:ellipsize="end"
                    android:text="@string/profile_total_repositories"
                    android:textColor="@color/white" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_detail_header"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/blue_light" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
</RelativeLayout>