<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/ic_apps"
                android:src="@drawable/ic_octocat" />

            <TextView
                style="@style/Title"
                android:layout_gravity="center_vertical"
                android:layout_weight="3"
                android:layout_marginEnd="16dp"
                android:text="@string/tv_title_home" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/card_view_home"
        android:focusable="false"
        app:iconifiedByDefault="false"
        app:queryBackground="@null"
        app:queryHint="@string/search_hint" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/search_view"
        tools:listitem="@layout/item_rv_user" />

    <TextView
        android:id="@+id/tv_error_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/tv_try_again"
        android:textColor="@color/blue_light"
        android:textSize="24sp"
        android:visibility="gone"
        app:drawableBottomCompat="@drawable/ic_baseline_cached_24" />

</RelativeLayout>